--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -29,4 +29,8 @@
     <string name="register_placeholder_confirm_password">Digite sua senha</string>
     <string name="register_button">CADASTRAR</string>
     <string name="register_link_login">Já tem cadastro? Entre aqui</string>
+    
+    <!-- Social -->
+    <string name="social_button_unfollowing">Deixar de seguir</string>
+    <string name="social_button_following">Seguir</string>
 </resources>
