fix: Refactor estrutura da tela de login.

--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="login_label_email">E-mail:</string>
     <string name="login_placeholder_email">Digite seu e-mail</string>
     <string name="login_label_password">Senha:</string>
-    <string name="login_placeholder_password">Digite seu e-mail</string>
+    <string name="login_placeholder_password">Digite sua senha</string>
     <string name="login_link_forgot_password">Esqueceu sua senha?</string>
     <string name="login_button">ENTRAR</string>
     <string name="login_link_register">Não possui uma conta? Cadastre-se aqui</string>
