feat: Termos de Uso e Validação da tela de Cadastro

--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -51,7 +51,143 @@
     <string name="register_placeholder_confirm_password">Digite sua senha</string>
     <string name="register_button">CADASTRAR</string>
     <string name="register_link_login">Já tem cadastro? Entre aqui</string>
-    
+    <string name="register_accept_message">Li e concordo com os </string>
+    <string name="register_term_use">Termos de Uso</string>
+
+    <!-- Termo de Uso -->
+    <string name="dialog_button_dismiss">FECHAR</string>
+    <string name="dialog_button_accept">ACEITAR</string>
+    <string name="dialog_title_term"> Termos e Condições Gerais de Uso e Política de Privacidade da Plataforma CodeGenius</string>
+    <string name="dialog_body_term"> Os serviços da plataforma CodeGenius são fornecidos pela pessoa jurídica MindTech, com nome fantasia CodeGenius, inscrita no CNPJ sob o nº 89.007.517/0001-16, titular da propriedade intelectual sobre software, website, aplicativos, conteúdos e demais ativos relacionados à plataforma CodeGenius.
+
+1. Do objeto
+1.1. A plataforma CodeGenius visa licenciar o uso de seu software, website, aplicativos e demais ativos de propriedade intelectual, fornecendo ferramentas para auxiliar e dinamizar o aprendizado de programação básica.
+
+1.2. A plataforma caracteriza-se pela prestação do seguinte serviço: ludificação do ensino de programação básica.
+
+1.3. A plataforma realiza a venda à distância por meio eletrônico dos seguintes produtos ou serviços: acesso a cursos online, materiais educativos, ferramentas de gamificação e suporte técnico.
+
+2. Da aceitação
+2.1. O presente Termo estabelece obrigações contratadas de livre e espontânea vontade, por tempo indeterminado, entre a plataforma e as pessoas físicas ou jurídicas, usuárias do site e do aplicativo.
+
+2.2. Ao utilizar a plataforma, o usuário aceita integralmente as presentes normas e compromete-se a observá-las, sob o risco de aplicação das penalidades cabíveis.
+
+2.3. A aceitação do presente instrumento é imprescindível para o acesso e para a utilização de quaisquer serviços fornecidos pela empresa. Caso não concorde com as disposições deste instrumento, o usuário não deve utilizá-los.
+
+3. Do acesso dos usuários
+3.1. Serão utilizadas todas as soluções técnicas à disposição do responsável pela plataforma para permitir o acesso ao serviço 24 (vinte e quatro) horas por dia, 7 (sete) dias por semana. No entanto, a navegação na plataforma ou em alguma de suas páginas poderá ser interrompida, limitada ou suspensa para atualizações, modificações ou qualquer ação necessária ao seu bom funcionamento.
+
+4. Do cadastro
+4.1. O acesso às funcionalidades da plataforma exigirá a realização de um cadastro prévio e, a depender dos serviços ou produtos escolhidos, o pagamento de determinado valor.
+
+4.2. Ao se cadastrar, o usuário deverá informar dados completos, recentes e válidos, sendo de sua exclusiva responsabilidade manter referidos dados atualizados, bem como o usuário se compromete com a veracidade dos dados fornecidos.
+
+4.3. O usuário se compromete a não informar seus dados cadastrais e/ou de acesso à plataforma a terceiros, responsabilizando-se integralmente pelo uso que deles seja feito.
+
+4.4. Menores de 18 anos e aqueles que não possuírem plena capacidade civil deverão obter previamente o consentimento expresso de seus responsáveis legais para utilização da plataforma e dos serviços ou produtos, sendo de responsabilidade exclusiva dos mesmos o eventual acesso por menores de idade e por aqueles que não possuem plena capacidade civil sem a prévia autorização.
+
+4.5. Mediante a realização do cadastro, o usuário declara e garante expressamente ser plenamente capaz, podendo exercer e usufruir livremente dos serviços e produtos.
+
+4.6. O usuário deverá fornecer um endereço de e-mail válido, através do qual a plataforma realizará todas comunicações necessárias.
+
+4.7. Após a confirmação do cadastro, o usuário possuirá um login e uma senha pessoal, a qual assegura ao usuário o acesso individual à mesma. Desta forma, compete ao usuário exclusivamente a manutenção de referida senha de maneira confidencial e segura, evitando o acesso indevido às informações pessoais.
+
+4.8. Toda e qualquer atividade realizada com o uso da senha será de responsabilidade do usuário, que deverá informar prontamente a plataforma em caso de uso indevido da respectiva senha.
+
+4.9. Não será permitido ceder, vender, alugar ou transferir, de qualquer forma, a conta, que é pessoal e intransferível.
+
+4.10. Caberá ao usuário assegurar que o seu equipamento seja compatível com as características técnicas que viabilizem a utilização da plataforma e dos serviços ou produtos.
+
+4.11. O usuário poderá, a qualquer tempo, requerer o cancelamento de seu cadastro junto ao site ou aplicativo CodeGenius. O seu descadastramento será realizado o mais rapidamente possível, desde que não sejam verificados débitos em aberto.
+
+4.12. O usuário, ao aceitar os Termos e a Política de Privacidade, autoriza expressamente a plataforma a coletar, usar, armazenar, tratar, ceder ou utilizar as informações derivadas do uso dos serviços, do site e quaisquer plataformas, incluindo todas as informações preenchidas pelo usuário no momento em que realizar ou atualizar seu cadastro, além de outras expressamente descritas na Política de Privacidade que deverá ser autorizada pelo usuário.
+
+5. Dos serviços ou produtos
+5.1. A plataforma poderá disponibilizar para o usuário um conjunto específico de funcionalidades e ferramentas para otimizar o uso dos serviços e produtos.
+
+5.2. Na plataforma, os serviços ou produtos oferecidos estão descritos e apresentados com o maior grau de exatidão, contendo informações sobre suas características, qualidades, quantidades, composição, preço, garantia, prazos de validade e origem, entre outros dados, bem como sobre os riscos que apresentam à saúde e segurança do usuário.
+
+5.3. Antes de finalizar a compra de determinado produto ou serviço, o usuário deverá se informar sobre as suas especificações e sobre a sua destinação.
+
+5.4. A entrega de serviços ou produtos adquiridos na plataforma será informada no momento da finalização da compra.
+
+6. Dos preços
+6.1. A plataforma se reserva no direito de reajustar unilateralmente, a qualquer tempo, os valores dos serviços ou produtos sem consulta ou anuência prévia do usuário.
+
+6.2. Os valores aplicados são aqueles que estão em vigor no momento do pedido.
+
+6.3. Os preços são indicados em reais e não incluem as taxas de entrega, as quais são especificadas à parte e são informadas ao usuário antes da finalização do pedido.
+
+6.4. Na contratação de determinado serviço ou produto, a plataforma poderá solicitar as informações financeiras do usuário, como CPF, endereço de cobrança e dados de cartões. Ao inserir referidos dados, o usuário concorda que sejam cobrados, de acordo com a forma de pagamento que venha a ser escolhida, os preços então vigentes e informados quando da contratação. Referidos dados financeiros poderão ser armazenados para facilitar acessos e contratações futuras.
+
+6.5. A contratação dos serviços será renovada automaticamente pela plataforma, independentemente de comunicação ao usuário, mediante cobrança periódica da mesma forma de pagamento indicada pelo usuário quando da contratação do serviço.
+
+7. Do cancelamento
+7.1. O usuário poderá cancelar a contratação dos serviços de acordo com os termos que forem definidos no momento de sua contratação. Ainda, o usuário também poderá cancelar os serviços em até 7 (sete) dias após a contratação, mediante contato com o suporte da CodeGenius, de acordo com o Código de Defesa do Consumidor (Lei nº 8.078/90).
+
+7.2. O serviço poderá ser cancelado por:
+
+a) Parte do usuário: nessas condições, os serviços somente cessarão quando concluído o ciclo vigente ao tempo do cancelamento;
+b) Violação dos Termos de Uso: os serviços serão cessados imediatamente.
+7.3. O serviço poderá ser cancelado por:
+
+a) Parte do usuário: nessas condições, os serviços somente cessarão quando concluído o ciclo vigente ao tempo do cancelamento;
+b) Violação dos Termos de Uso: os serviços serão cessados imediatamente.
+8. Do suporte
+8.1. Em caso de qualquer dúvida, sugestão ou problema com a utilização da plataforma, o usuário poderá entrar em contato com o suporte, através do email mindtech.code@gmail.com ou telefone 11 91234-5678.
+
+8.2. Estes serviços de atendimento ao usuário estarão disponíveis nos seguintes dias e horários: 8:00 - 18:00.
+
+9. Das responsabilidades
+9.1. É de responsabilidade do usuário:
+
+a) Defeitos ou vícios técnicos originados no próprio sistema do usuário;
+b) A correta utilização da plataforma, dos serviços ou produtos oferecidos, prezando pela boa convivência, pelo respeito e cordialidade entre os usuários;
+c) Pelo cumprimento e respeito ao conjunto de regras disposto neste Termo de Condições Gerais de Uso, na respectiva Política de Privacidade e na legislação nacional e internacional;
+d) Pela proteção aos dados de acesso à sua conta/perfil (login e senha).
+9.2. É de responsabilidade da plataforma CodeGenius:
+
+a) Indicar as características do serviço ou produto;
+b) Os defeitos e vícios encontrados no serviço ou produto oferecido desde que lhe tenha dado causa;
+c) As informações que foram por ele divulgadas, sendo que os comentários ou informações divulgadas por usuários são de inteira responsabilidade dos próprios usuários;
+d) Os conteúdos ou atividades ilícitas praticadas através de sua plataforma.
+9.3. A plataforma não se responsabiliza por links externos contidos em seu sistema que possam redirecionar o usuário para ambientes externos à sua rede.
+
+9.4. Não poderão ser incluídos links externos ou páginas que sirvam para fins comerciais ou publicitários ou quaisquer informações ilícitas, violentas, polêmicas, pornográficas, xenofóbicas, discriminatórias ou ofensivas.
+
+10. Dos direitos autorais
+10.1. O presente Termo de Uso concede aos usuários uma licença não exclusiva, não transferível e não sublicenciável, para acessar e fazer uso da plataforma e dos serviços e produtos por ela disponibilizados.
+
+10.2. A estrutura do site ou aplicativo, as marcas, logotipos, nomes comerciais, layouts, gráficos e design de interface, imagens, ilustrações, fotografias, apresentações, vídeos, conteúdos sonoros, programas de computador, banco de dados, arquivos de transmissão e quaisquer outras informações e direitos de propriedade intelectual da plataforma CodeGenius, observados os termos da Lei da Propriedade Industrial (Lei nº 9.279/96), Lei de Direitos Autorais (Lei nº 9.610/98) e Lei do Software (Lei nº 9.609/98), estão devidamente reservados.
+
+10.3. Este Termo de Uso não cede ou transfere ao usuário qualquer direito, de modo que o acesso não gera qualquer direito de propriedade intelectual ao usuário, exceto pela licença limitada ora concedida.
+
+10.4. O uso da plataforma pelo usuário é pessoal, individual e intransferível, sendo vedado qualquer uso não autorizado, comercial ou não comercial. Tais usos consistirão em violação dos direitos de propriedade intelectual da CodeGenius, puníveis nos termos da legislação aplicável.
+
+11. Das sanções
+11.1. Sem prejuízo das demais medidas legais cabíveis, a CodeGenius poderá, a qualquer momento, advertir, suspender ou cancelar a conta do usuário:
+
+a) Que violar qualquer dispositivo do presente Termo;
+b) Que descumprir os seus deveres de usuário;
+c) Que tiver qualquer comportamento fraudulento, doloso ou que ofenda a terceiros.
+12. Da rescisão
+12.1. A não observância das obrigações pactuadas neste Termo de Uso ou da legislação aplicável poderá, sem prévio aviso, dar ensejo à imediata rescisão unilateral por parte da CodeGenius e ao bloqueio de todos os serviços prestados ao usuário.
+
+13. Das alterações
+13.1. Os itens descritos no presente instrumento poderão sofrer alterações, unilateralmente e a qualquer tempo, por parte da CodeGenius, para adequar ou modificar os serviços, bem como para atender novas exigências legais. As alterações serão veiculadas pelo site ou aplicativo e o usuário poderá optar por aceitar o novo conteúdo ou por cancelar o uso dos serviços, caso seja assinante de algum serviço.
+
+14. Da política de privacidade
+14.1. Além do presente Termo, o usuário deverá consentir com as disposições contidas na respectiva Política de Privacidade a ser apresentada a todos os interessados dentro da interface da plataforma.
+
+15. Do foro
+15.1. Para a solução de controvérsias decorrentes do presente instrumento será aplicado integralmente o Direito brasileiro.
+
+15.2. Os eventuais litígios deverão ser apresentados no foro da comarca em que se encontra a sede da empresa.
+
+Com estas condições estabelecidas, a plataforma CodeGenius espera proporcionar um ambiente seguro, eficaz e eficiente para o aprendizado e desenvolvimento dos seus usuários. Se houver dúvidas ou necessidade de mais informações, entre em contato com o nosso suporte.
+    </string>
+
+
     <!-- Social -->
     <string name="social_button_unfollowing">Deixar de seguir</string>
     <string name="social_button_following">Seguir</string>
